--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "./node_modules/.bin/mocha ./src/controllers/seriesController.spec.js",
+    "start": "nodemon --inspect server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^5.4.19",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "request": "^2.88.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^5.15.3",
+    "mocha": "^6.0.2",
     "nodemon": "^1.18.10"
   }
 }
