--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha ./src/controllers/seriesController.spec.js",
-    "start": "nodemon --inspect server.js"
+    "test": "./node_modules/.bin/mocha ./src/controllers/userController.spec.js",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,8 @@
     "chai": "^4.2.0",
     "eslint": "^5.15.3",
     "mocha": "^6.0.2",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "superagent": "^5.0.2",
+    "supertest": "^4.0.2"
   }
 }
