--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "chai-http": "^4.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^7.4.0",
+    "md5": "^2.2.1",
     "mongoose": "^5.4.19",
     "mongoose-paginate": "^5.0.3",
     "request": "^2.88.0"
